--- a/mesin1/.env-example
+++ b/mesin1/.env-example
@@ -1,10 +1,10 @@
 ISAPI_BASE_URL=http://192.168.100.202
-ISAPI_USERNAME=admin
-ISAPI_PASSWORD=FCU8w7yS
+ISAPI_USERNAME=
+ISAPI_PASSWORD=
 MACHINE_CODE=1
 MINOR_VALUES=1,38,75
 API_BASE_URL=https://12-smartattd.test/api/v1
-API_SECRET_KEY=14|A5TfHK0ZLvb5UEWNY7GZq9cBtd3B5lHVTBcGu9sK777950f6
+API_SECRET_KEY=
 
 # Contoh: polling setiap 1 menit
 SCHEDULE_INTERVAL=*/1 * * * *
